--- a/src/html/network.html
+++ b/src/html/network.html
@@ -1,14 +1,27 @@
 <section class="network">
-    <div class="container">
-        <div class="network__bcg-slider">
-            <img src="../img/bcg-network/photo1.png" alt="Cap of coffee">
-            <img src="../img/bcg-network/photo2.png" alt="Cafe">
-            <img src="../img/bcg-network/photo3.png" alt="Food">
-            <img src="../img/bcg-network/photo4.png" alt="Dessert">
-            <img src="../img/bcg-network/photo5.png" alt="Food">
-            <img src="../img/bcg-network/photo6.jpg" alt="Pizza">
+    <div class="network__bcg-slider">
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo1.png" alt="Cafe">
         </div>
-        <div class="network__link-inst">
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo2.png" alt="Cap of coffee">
+        </div>
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo3.png" alt="Food">
+        </div>
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo4.png" alt="Dessert">
+        </div>
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo5.png" alt="Food">
+        </div>
+        <div class="bcg-slider-wrapp">
+            <img class="bcg-slider-img" src="../img/bcg-network/photo6.jpg" alt="Pizza">
+        </div>
+    </div>
+
+    <div class="container container-wrapp">
+        <div class="link-border">
             <a class="link-inst" href="#">Instagram: <span class="link-inst-bold">@classic_kovel</span></a>
         </div>
     </div>
