--- a/src/html/network.html
+++ b/src/html/network.html
@@ -1,22 +1,22 @@
-<section class="network">
+<section class="network" id="about">
     <div class="network__bcg-slider">
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo1.png" alt="Cafe">
+            <img class="bcg-slider-img" src="img/bcg-network/photo1.png" alt="Cafe">
         </div>
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo2.png" alt="Cap of coffee">
+            <img class="bcg-slider-img" src="img/bcg-network/photo2.png" alt="Cap of coffee">
         </div>
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo3.png" alt="Food">
+            <img class="bcg-slider-img" src="img/bcg-network/photo3.png" alt="Food">
         </div>
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo4.png" alt="Dessert">
+            <img class="bcg-slider-img" src="img/bcg-network/photo4.png" alt="Dessert">
         </div>
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo5.png" alt="Food">
+            <img class="bcg-slider-img" src="img/bcg-network/photo5.png" alt="Food">
         </div>
         <div class="bcg-slider-wrapp">
-            <img class="bcg-slider-img" src="../img/bcg-network/photo6.jpg" alt="Pizza">
+            <img class="bcg-slider-img" src="img/bcg-network/photo6.jpg" alt="Pizza">
         </div>
     </div>
 
