--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,22 +1,31 @@
-<footer class="foo">
+<!-- <div class="foo-scene">
+    <div></div>
+    <div></div>
+    <div></div>
+</div> -->
+<footer class="foo" id="contact">
+    <div class="foo-scene">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
     <div class="container">
         <h2 class="title">
-            Fill out the form
+            Fill out the form <br>
             and we will call you
         </h2>
 
-        <form method="POST" id="foo-form">
-            <input class="foo-input" type="text" placeholder="Your name" required>
-            <input class="foo-input" type="number" placeholder="Phone number" required>
+        <form class="foo-form" method="POST" id="foo-form">
+            <div class="foo-input-wrapp">
+                <input class="foo-input" type="text" placeholder="Your name" required>
+            </div>
+            <div class="foo-input-wrapp">
+                <input class="foo-input" type="number" placeholder="Phone number" required>
+            </div>
             <button class="foo-btn-call" form="foo-form">Call Back
-                <svg width="36" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 9.038a1 1 0 100 2v-2zm32 1v1h2.414l-1.707-1.707-.707.707zM24.707.331a1 1 0 10-1.414 1.414L24.707.331zM1 11.038h32v-2H1v2zm32.707-1.707l-9-9-1.414 1.414 9 9 1.414-1.414z" fill="#fff"/></svg>
+                <svg class="foo-btn-icon" width="36" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 9.038a1 1 0 100 2v-2zm32 1v1h2.414l-1.707-1.707-.707.707zM24.707.331a1 1 0 10-1.414 1.414L24.707.331zM1 11.038h32v-2H1v2zm32.707-1.707l-9-9-1.414 1.414 9 9 1.414-1.414z" fill="#fff"/></svg>
             </button>
         </form>
-
-        <div class="foo-info">
-            <p>© Classic Family Restaurant</p>
-            <img src="../img/header/logo.png" alt="logo">
-            <p>Made with delight by <span>harmuder</span></p>
-        </div>
     </div>
 </footer>
