--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,26 +1,32 @@
-<header class="header">
-    <div class="container">
+<!-- Parallax Scene -->
+    <div class="scene">
+        <div data-speed="10" class="scene__layer layer-1"></div>
+        <div data-speed="40" class="scene__layer layer-2"></div>
+        <div data-speed="80" class="scene__layer layer-3"></div>
+    </div>
 
+<!-- Header -->
+    <header class="header">
+        <div class="container header-container">
 <!-- Header Logo-->
-        <div class="head-content">
-            <div class="head__logo">
-                <img src="../img/header/logo.png" alt="Logo">
-            </div>
-            <div class="head__burger">
-                <div class="burger-btn burger-btn1"></div>
-                <div class="burger-btn burger-btn2"></div>
-            </div>
+        <div class="head__logo-header">
+            <a href="index.html" class="logo-header-link">
+                <img src="img/header/logo.png" alt="Logo">
+            </a>
         </div>
-
+        <div class="head__burger">
+            <div class="burger-btn burger-btn1"></div>
+            <div class="burger-btn burger-btn2"></div>
+        </div>
 <!-- Nav Bar -->
         <nav class="head__nav">
             <div class="nav-list-link">
-                <a href="#" class="nav-link">Payment</a>
-                <a href="#" class="nav-link">About us</a>
-                <a href="#" class="nav-link">Contacts</a>
+                <a href="#product" class="nav-link">Payment</a>
+                <a href="#about" class="nav-link">About us</a>
+                <a href="#contact" class="nav-link">Contacts</a>
             </div>
 
-            <div class="head-contact">
+           <div class="head-contact">
                 <p class="contact-worktime">
                     Daily 11am - 9pm
                 </p>
@@ -28,28 +34,69 @@
                     <div class="contact-item">
                         <svg class="contact-svg" width="14" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.877 9.19a7.948 7.948 0 01-2.497-.398c-.39-.134-.87-.011-1.11.234l-1.574 1.188c-1.825-.974-2.95-2.099-3.91-3.91L4.938 4.77c.3-.299.407-.736.278-1.146a7.96 7.96 0 01-.4-2.5C4.818.503 4.315 0 3.695 0h-2.57C.503 0 0 .504 0 1.123 0 8.223 5.776 14 12.877 14c.619 0 1.123-.504 1.123-1.123v-2.564c0-.62-.504-1.124-1.123-1.124z" fill="#fff"/></svg>
                     </div>
-                    <a href="tel: 0800330898" class="contact-num">
+                    <a href="tel:0800330898" class="contact-num">
                         0 800 33 08 98
                     </a>
                 </div>
             </div>
         </nav>
+        <div class="overlay"></div>
 
-<!-- Hero -->
-        <section class="hero">
+            <section class="hero">
                 <h2 class="title">
                     Food delivery in Kovel
                 </h2>
                 <p class="hero-subtitle">
                     If you decide to relax or have unexpected guests, call us. We make <br> sure that your vacation is comfortable, enjoyable and delicious
                 </p>
+            </section>
+        </div>
+    </header>
+
+<!-- <header class="header">
+    <div class="container head-container"> -->
+        <!-- Header Logo-->
+        <!-- <div class="head__logo-header">
+            <a href="index.html" class="logo-header-link">
+                <img src="img/header/logo.png" alt="Logo">
+            </a>
+        </div>
+        <div class="head__burger">
+            <div class="burger-btn burger-btn1"></div>
+            <div class="burger-btn burger-btn2"></div>
+        </div> -->
+
+        <!-- Nav Bar -->
+        <!-- <nav class="head__nav">
+            <div class="nav-list-link">
+                <a href="#product" class="nav-link">Payment</a>
+                <a href="#about" class="nav-link">About us</a>
+                <a href="#contact" class="nav-link">Contacts</a>
+            </div> -->
+
+            <!-- <div class="head-contact">
+                <p class="contact-worktime">
+                    Daily 11am - 9pm
+                </p>
+                <div class="contact-phone">
+                    <div class="contact-item">
+                        <svg class="contact-svg" width="14" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.877 9.19a7.948 7.948 0 01-2.497-.398c-.39-.134-.87-.011-1.11.234l-1.574 1.188c-1.825-.974-2.95-2.099-3.91-3.91L4.938 4.77c.3-.299.407-.736.278-1.146a7.96 7.96 0 01-.4-2.5C4.818.503 4.315 0 3.695 0h-2.57C.503 0 0 .504 0 1.123 0 8.223 5.776 14 12.877 14c.619 0 1.123-.504 1.123-1.123v-2.564c0-.62-.504-1.124-1.123-1.124z" fill="#fff"/></svg>
+                    </div>
+                    <a href="tel:0800330898" class="contact-num">
+                        0 800 33 08 98
+                    </a>
+                </div>
+            </div>
+        </nav>
+        <div class="overlay"></div> -->
+        <!-- Hero -->
+        <!-- <section class="hero">
+            <h2 class="title">
+                Food delivery in Kovel
+            </h2>
+            <p class="hero-subtitle">
+                If you decide to relax or have unexpected guests, call us. We make <br> sure that your vacation is comfortable, enjoyable and delicious
+            </p>
         </section>
     </div>
-
-    <!-- Parallax -->
-    <div class="scene">
-        <div class="scene-bc scene1"></div>
-        <div class="scene-bc scene2"></div>
-        <div class="scene-bc scene3"></div>
-    </div>
-</header>
+</header> -->
