--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	@@include('./html/products.html')
 	@@include('./html/network.html')
 	@@include('./html/footer.html')
-
+	@@include('./html/logo.html')
 		<script src="js/app.min.js"></script>
 </body>
 </html>
