--- a/src/html/network.html
+++ b/src/html/network.html
@@ -20,9 +20,9 @@
         </div>
     </div>
 
-    <div class="container container-wrapp">
+    <d  iv class="container container-wrapp">
         <div class="link-border">
-            <a class="link-inst" href="#">Instagram: <span class="link-inst-bold">@classic_kovel</span></a>
+            <a class="link-inst" href="https://www.instagram.com/">Instagram: <span class="link-inst-bold">@classic_kovel</span></a>
         </div>
-    </div>
+    </d>
 </section>
