--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 	@@include('./html/header.html')
-	@@include('./html/products.html')
-	@@include('./html/network.html')
+	<main>
+		@@include('./html/products.html')
+		@@include('./html/network.html')
+	</main>
 	@@include('./html/footer.html')
-	@@include('./html/logo.html')
 		<script src="js/app.min.js"></script>
 </body>
 </html>
