--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,15 +1,12 @@
-<!-- Parallax Scene -->
-    <!-- <div class="scene">
-        <div data-speed="10" class="scene__layer layer-1"></div>
-        <div data-speed="30" class="scene__layer layer-2"></div>
-        <div data-speed="80" class="scene__layer layer-3"></div>
-    </div> -->
-
-    <!-- <header  class="header">
-
-    </header> -->
 <!-- Header -->
     <header class="header">
+        <!-- Parallax Scene -->
+        <div class="scene">
+            <div data-speed="10" class="scene__layer layer-1"></div>
+            <div data-speed="30" class="scene__layer layer-2"></div>
+            <div data-speed="80" class="scene__layer layer-3"></div>
+        </div>
+
         <div class="container header-container">
 <!-- Header Logo-->
         <div class="head__logo-header">
