--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 		@@include('./html/products.html')
 		@@include('./html/network.html')
 	</main>
+	@@include('./html/btn-scroll-up.html')
 	@@include('./html/footer.html')
 		<script src="js/app.min.js"></script>
 </body>
